--- a/build.gradle
+++ b/build.gradle
@@ -13,3 +13,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'net.sf.jopt-simple:jopt-simple:6.0-alpha-3'
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.vova7865.ftbdownloader.Main'
+    }
+}
